welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: Int(49) does not take parameters
	for ( i<- 49() )
                    ^